Fix #119447: Auto Smooth versioning modifiers appearing on Append

When append/linking, add auto-smooth modifier if lib file is saved in
4.0 or prior versions